workhorse/gitops/cluster/prod/argocd/ingress/argocd-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd
  namespace: argocd
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/inbound-cidrs: 73.170.221.233/32
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/backend-protocol: HTTPS
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    external-dns.alpha.kubernetes.io/hostname: argocd.jresmith.com
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-west-2:945503455271:certificate/3e571108-5861-42f0-be07-c625a1b28514
    alb.ingress.kubernetes.io/listen-ports: |
      [{"HTTP":80},{"HTTPS":443}]

spec:
  ingressClassName: alb
  rules:
    - host: argocd.jresmith.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 443
